<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="tripistoolargetodisplay">Trip is too large to display, please use Antrip website instead</string>
    <string name="register_usernametrydifferent">try a different username</string>
    <string name="register_serverbusy">Server is busy, please try again later</string>
    <string name="register_connectionerror">Connection error, please try again later!</string>
    <string name="register_usernametaken">Username is already taken</string>
    <string name="register_success">Registration success!</string>
    <string name="register_emailinvalid">Invalid e-mail format</string>
    <string name="register_emailempty">please enter e-mail</string>
    <string name="register_passworddoesnotmatch">password does not match</string>
    <string name="register_passwordempty">please enter password</string>
    <string name="register_usernametoolong">username cannot exceed 20 characters</string>
    <string name="register_usernametooshort">username must have at least 4 characters</string>
    
    <string name="puclivtripsharer">Sharer:</string>
    <string name="friendlist_emptyview">Login to find your friends</string>
    <string name="gmapviewer_marker_end">End</string>
    <string name="gmapviewer_marker_start">Start</string>
    <string name="universal_loading">Loading...</string>
    <string name="lowbatteryautostopnotification_title">Antrip auto-saved</string>
    <string name="lowbatteryautostopnotification_message">Battery below threshold</string>
    <string name="friendfinder_emptylist">No results found for your query</string>
	<string name="friendlist_sharedtrips">Trips shared with you:</string>
    <string name="public_trip_available">Number of public trips:</string>
    <string name="triplist_title_pendingupload">Pending upload</string>
    <string name="title_friendrequest">Friend Request</string>
    <string name="title_friendfinder">Search Users</string>
    <string name="gmapviewer_error">Oops!\nUnable to load trip data!</string>
    <string name="public_trip">Public Trip</string>
    
    <string name="menu_help">Help</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_maptype">Map Type</string>
    
    <string name="setting_title_recordermode">Recorder Mode</string>
    <string name="setting_title_account">Account Information</string>
    <string name="setting_title_power">Power Settings</string>
    <string name="setting_title_autostop">Battery Threshold</string>
    <string name="setting_title_autostop_summary_prefix">Antrip will stop when battery reached </string>
    <string name="setting_title_autostop_summary_postfix">%%</string>
    <string name="setting_title_general">General Settings</string>
    <string name="setting_contact">Contact PLASH Team</string>
    <string name="setting_privacy">Privacy Policy</string>
    <string name="setting_tos">Terms of Service</string>
    <string name="setting_summary_login">Click here to login</string>
    <string name="setting_summary_logout">Click here to logout</string>
    <string name="setting_title_youare">Logged in as: </string>
    <string name="setting_title_notlogin">You are not logged in yet</string>
    
    <string name="progressdialog_upload_done">Upload complete</string>
    <string name="progressdialog_uploading">Uploading...</string>
    <string name="progressdialog_deleting">Deleting</string>
    <string name="progressdialog_registering">Registering...</string>
    <string name="progressdialog_logginin">Logging in...</string>
    
    <string name="alertdialog_sharetrip_commiting">Saving...</string>
    <string name="alertdialog_sharetrip_commit">Save</string>
    <string name="alertdialog_sharetrip_title">Share with...</string>
    <string name="alertdialog_setpublictripname">Set as public trip</string>
    <string name="alertdialog_nointernet_noupload">No internet connection, abort upload!</string>
    <string name="alertdialog_maybelater">Maybe later</string>
    <string name="alertdialog_loginnow">Login now</string>
    <string name="alertdialog_pleaseloginfirst">Please login first!</string>
    <string name="alertdialog_delete_message">Are you sure you want to delete</string>
    <string name="alertdialog_delete_title">Deletion</string>
    <string name="alertdialog_sorrybutton">Sorry...</string>
    <string name="alertdialog_nointernet_nologin">No internet connection, cannot login</string>
    <string name="alertdialog_iseebutton">I see...</string>
    <string name="alertdialog_invalid_trip_message">Your trip contains no valid point, it has been discarded</string>
    <string name="alertdialog_invalid_trip_title">Invalid Trip</string>
	
    <string name="toast_friendrequest_accept_success_suffix">!</string>
    <string name="toast_friendrequest_accept_success_prefix">You are now friends with</string>
    <string name="toast_triplist_shared_failed">Unable to share trip!</string>
    <string name="toast_triplist_shared_success">Trip shared!</string>
    <string name="toast_waitingforfirstlocationfix">Locating, please wait...</string>
    <string name="toast_nofriendtosharetripwith">You have no friends to share trips with...</string>
    <string name="toast_addfriendnotloginyet">Please login first!</string>
    <string name="toast_friendrequest_fail">Unable to send invite, please try again later</string>
    <string name="toast_friendrequest_success">Invite successfully sent to:</string>
    <string name="toast_alreadyfriends">You are already friends</string>
    <string name="toast_friendrequestpending">Request already sent</string>
    <string name="toast_no_pending_friendreqiest">You have no pending friend request</string>
    <string name="toast_cannotviewtrip">Oops! Unable to view this trip!</string>
    <string name="toast_trip_deletion_failed">Deletion failed! Try again later!</string>
    <string name="toast_trip_cannotdelete">cannot be deleted!</string>
    <string name="toast_trip_deleted">deleted!</string>
    <string name="toast_register_failed">Registeration failed, try again later</string>
    <string name="toast_register_success">Registeration success</string>
    <string name="toast_register_canceled">Registeration canceled</string>
    <string name="toast_login_failed">Login failed, try again later</string>
    <string name="toast_login_success">Login success</string>
    <string name="toast_login_canceled">Login canceled</string>
    <string name="toast_canceled">Canceled</string>
    <string name="toast_nointernet_nofetch">No internet connection, unable to load your trip...</string>
    <string name="toast_unabletofetchtripdata">Unable to fetch data</string>
    <string name="toast_theres_no_help">There\'s no help...</string>
    <string name="toast_function_coming_soon">Function coming soon...</string>
    <string name="toast_low_battery_warning">Low battery!Antrip will stop recording now!</string>
    
    <string name="app_name">ANTrip</string>
    <string name="okay">Okay</string>
    <string name="nope">Nope</string>
    <string name="error">Error</string>
    <string name="save">Save</string>
    <string name="typetosearch">Looking for someone?</string>
    <string name="dialog_title_login">Login\n</string>
    <string name="dialog_title_register">Register\n</string>
    <string name="dialog_hint_username">Username</string>
    <string name="dialog_hint_password">Password</string>
    <string name="dialog_hint_confirmpassword">Confirm password</string>
    <string name="dialog_hint_email">E-mail</string>
    <string name="dialog_button_commit">Login</string>
    <string name="dialog_button_cancel">Cancel</string>
    <string name="dialog_donthaveaccount">\nDon\'t have an account? you can...</string>
    <string name="dialog_registernewaccount">register a new account</string>
    <string name="dialog_or">or</string>
    <string name="dialog_loginwithfacebook">Or you can login with facebook</string>
    <string name="dialog_button_register">Register</string>
    <string name="dialog_agreetostuff">I agree to the PLASH <a href="http://www.plash.tw/html/antrip.html">Terms of Service</a></string>
    <string name="dropdown_recorder">Trip Recorder</string>
    <string name="dropdown_triplist">Trip History</string>
    <string name="dropdown_friendlist">Friend List</string>
    <string name="gpsdisabledwarning">GPS is disabled!\nClick here to enable GPS</string>
    <string name="trip_list_empty_actual">Nothing to see here...</string>
    
    <string name="checkin_text_hint">Type something here!</string>
    
    <string name="still_recording_warning">ANTrip is still recording in the background!</string>
    
    <string name="untitled_trip">Untitled Trip</string>
    <string name="input_tripname">Name your trip:</string>
    <string name="save_tripname">Save</string>
    
    <string name="version">Build Version</string>
    <string name="account_info">Account Info</string>
    <string name="login_title">Logged in as: </string>
    <string name="pref_logout_sum">Click to logout</string>
    <string name="upload_failed_warning">Upload incomplete! please try again later!</string>
    <string name="upload_complete">Upload complete!</string>
    
    <string name="notification_new_trip_started">A new recording has begun!</string>
    <string name="notification_is_recording_a_trip">is recording your trip...</string>
    
    <string name="notification_upload_in_progress">upload in progress...</string>
    <string name="notification_starting_upload">start uploading trip(s)</string>
    <string name="alertdiag_threat_title">Quit ANTrip?</string>
    
    <string name="login_warning">Please login first!</string>
    <string name="logout_warning">A trip is still recording, logout anyway?</string>
    
    <string name="eowversion">New World Survivor Edition</string>
    
    <string-array name="setting_recorder_mode">
        <item >Maximize battery life</item>
        <item >Maximize accuracy</item>
        <item >Auto adjust</item>
    </string-array>
    <string-array name="setting_recorder_mode_value">
        <item >0</item>
        <item >1</item>
        <item >2</item>
    </string-array>
    <string-array name="setting_autostop_threshold">
        <item >15%</item>
        <item >20%</item>
        <item >25%</item>
        <item >30%</item>
        <item >35%</item>
        <item >40%</item>
        <item >45%</item>
        <item >50%</item>
        <item >55%</item>
        <item >60%</item>
    </string-array>
    <string-array name="setting_autostop_threshold_value">
        <item >15</item>
        <item >20</item>
        <item >25</item>
        <item >30</item>
        <item >35</item>
        <item >40</item>
        <item >45</item>
        <item >50</item>
        <item >55</item>
        <item >60</item>
    </string-array>
    <string-array name="triplist_contextmenu_local">
        <item >Upload</item>
        <item >Delete</item>
    </string-array>
    <string-array name="triplist_contextmenu_remote">
        <item >Share</item>
        <item >Delete</item>
    </string-array>
    <string-array name="maptype_array">
        <item >Normal</item>
        <item >Satellite</item>
        <item >Terrain</item>
        <item >Hybrid</item>
    </string-array>
    <string name="app_id">314048998686760</string>
</resources>