<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/setting_title_account" >
        <Preference
            android:enabled="true"
            android:key="username" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/setting_title_power" >
        <ListPreference
            android:defaultValue="2"
            android:entries="@array/setting_recorder_mode"
            android:entryValues="@array/setting_recorder_mode_value"
            android:key="recorder_mode"
            android:title="@string/setting_title_recordermode" />
        <ListPreference
            android:defaultValue="25"
            android:entries="@array/setting_autostop_threshold"
            android:entryValues="@array/setting_autostop_threshold_value"
            android:key="auto_stop_threshold"
            android:title="@string/setting_title_autostop" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/setting_title_general" >
        <Preference
            android:key="contact"
            android:title="@string/setting_contact" />
        <Preference
            android:key="license"
            android:title="@string/setting_tos" />
        <Preference
            android:key="version"
            android:title="@string/version" />
    </PreferenceCategory>

</PreferenceScreen>