<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dip"
    android:layout_gravity="center"
    android:orientation="vertical" >
    
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/dialog_title_register"
        android:textSize="20sp"
        android:textColor="#dddddd"/>
    
	<EditText
        android:id="@+id/register_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dip"
        android:hint="@string/dialog_hint_username"
        android:singleLine="true" />
	
	<EditText
        android:id="@+id/register_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dip"
        android:hint="@string/dialog_hint_email"
        android:inputType="textEmailAddress"
        android:singleLine="true"/>
	
    <EditText
        android:id="@+id/register_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dip"
        android:hint="@string/dialog_hint_password"
        android:inputType="textPassword"
        android:singleLine="true" />
    
    <EditText
        android:id="@+id/register_password_check"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dip"
        android:hint="@string/dialog_hint_confirmpassword"
        android:inputType="textPassword"
        android:singleLine="true" />

    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">
        
        <Button 
            android:id="@+id/register_commit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dip"
            android:text="@string/dialog_button_register"
            android:gravity="center"
            android:enabled="false"
            android:layout_weight="1"/>
        
        <Button 
            android:id="@+id/register_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dip"
            android:text="@string/dialog_button_cancel"
            android:gravity="center"
            android:layout_weight="1"/>
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <CheckBox
            android:id="@+id/register_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dip"
            android:gravity="center" />

        <TextView
            android:id="@+id/register_tos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:text="@string/dialog_agreetostuff"/>
    </LinearLayout>
</LinearLayout>