<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dip"
    android:layout_gravity="center"
    android:orientation="vertical" >
	
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/dialog_title_login"
        android:textSize="20sp"
        android:textColor="#dddddd"/>
    
    <EditText
        android:id="@+id/login_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dip"
        android:hint="@string/dialog_hint_username"
        android:singleLine="true" />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dip"
        android:hint="@string/dialog_hint_password"
        android:inputType="textPassword"
        android:singleLine="true" />

    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">
        
        <Button 
            android:id="@+id/login_commit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dip"
            android:text="@string/dialog_button_commit"
            android:gravity="center"
            android:layout_weight="1"/>
        
        <Button 
            android:id="@+id/login_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dip"
            android:text="@string/dialog_button_cancel"
            android:gravity="center"
            android:layout_weight="1"/>
    </LinearLayout>
    
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/dialog_donthaveaccount"/>
    
    <Button 
            android:id="@+id/login_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dip"
            android:text="@string/dialog_registernewaccount"
            android:gravity="center"/>
    
    <!-- <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/dialog_or"/>
    
    <Button 
            android:id="@+id/login_facebook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dip"
            android:text="@string/dialog_loginwithfacebook"
            android:gravity="center"/> -->
</LinearLayout>